--- a/index.css
+++ b/index.css
@@ -24,7 +24,7 @@
   background-color: aquamarine;
 }
 .button:active{
-  background-color: yellow;
+  background-color: pink;
   color: red;
   width: 93px;
   height: 93px;
