--- a/index.css
+++ b/index.css
@@ -1,24 +1,57 @@
+@import url('https://fonts.googleapis.com/css2?family=Poppins:ital,wght@0,100;0,200;0,300;0,400;0,500;0,600;0,700;0,800;0,900;1,100;1,200;1,300;1,400;1,500;1,600;1,700;1,800;1,900&display=swap');
+*{
+    margin: 0;
+    padding: 0;
+    box-sizing: border-box;
+    font-family: 'Poppins', sans-serif ;
+}
+
+body{
+    width: 100%;
+    height: 100vh;
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    background: linear-gradient(90deg, #352f3f, #2f4d4a);
+}
 #calculator{
-    border: 1px solid black;
-    height: 400px;
-    width: 300px;
-    background-color: rgb(235, 250, 213);
-    border-radius: 5px;
+    border: 1px solid #717377;
+    padding: 20px;
+    box-shadow: 0px 3px 15px rgba(117, 66, 53, 0.9);
+    background-color: transparent;
+    border-radius: 16px;
 }
 
 #display{
     margin: 10px;
-    width: 88%;
-    font-size: 25px;
+    width: 320px;
+    border: none;
+    padding: 24px;
+    background: transparent;
+    box-shadow: 0px 3px 15px rgba(85, 81, 81, 0.1);
+    font-size: 40px;
+    text-align: right;
+    color: #ffffff;
 }
 
-#button-cont{
-   display: flex;
-   flex-wrap: wrap;
-   justify-content: center;
-}
+
 .button{
-    margin: 5px;
-    width: 28%;
-    height: 40px ;
+    margin: 10px;
+    width: 60px;
+    height: 60px ;
+    border: none;
+    border-radius: 50%;
+    background: transparent;
+    color: #fff;
+    font-size: 20px;
+    box-shadow: -8px -8px 15px rgba(248, 244, 3, 0.1)
+}
+
+.fd{
+    color: rgb(136, 179, 19);
+}
+
+#equal{
+    background-color: rgb(201, 89, 49);
+
 }
