--- a/index.css
+++ b/index.css
@@ -24,12 +24,12 @@ body{
 
 #display{
     margin: 10px;
-    width: 320px;
+    width: 8.8em;
     border: none;
     padding: 24px;
     background: transparent;
     box-shadow: 0px 3px 15px rgba(85, 81, 81, 0.1);
-    font-size: 40px;
+    font-size: 2.3em;
     text-align: right;
     color: #ffffff;
 }
@@ -37,13 +37,13 @@ body{
 
 .button{
     margin: 10px;
-    width: 60px;
-    height: 60px ;
+    width: 3.5em;
+    height: 3.5em ;
     border: none;
     border-radius: 50%;
     background: transparent;
     color: #fff;
-    font-size: 20px;
+    font-size: 1.1em;
     box-shadow: -8px -8px 15px rgba(248, 244, 3, 0.1)
 }
 
